added some comments and docs

--- a/notebooks/ai360_reject_option_classification.ipynb
+++ b/notebooks/ai360_reject_option_classification.ipynb
@@ -6,14 +6,27 @@
    "source": [
     "# Reject Option Classification\n",
     "\n",
-    "**Uses the Reject Option Classification post-processing algorithm from the AI360 toolkit. This algorithm works by giving an unfavorable outcome to privileged groups and a favorable outcome for unprivileged groups in a confidence band around the decision boundary with the highest uncertainty.** https://aif360.readthedocs.io/en/latest/modules/algorithms.html\n",
+    "**Uses the Reject Option Classification post-processing algorithm from the AIF360 toolkit. This algorithm works by giving an unfavorable outcome to privileged groups and a favorable outcome for unprivileged groups in a confidence band around the decision boundary with the highest uncertainty.** https://aif360.readthedocs.io/en/latest/modules/algorithms.html\n",
     "\n",
-    "Based on the example found at https://github.com/IBM/AIF360/blob/master/examples/demo_reject_option_classification.ipynb"
+    "Based on the example found at https://github.com/IBM/AIF360/blob/master/examples/demo_reject_option_classification.ipynb\n",
+    "\n",
+    "See http://aif360.mybluemix.net/resources#guidance for guidance on metrics and mitigation algorithms\n",
+    "\n",
+    "https://github.com/cosmicBboy/themis-ml/blob/master/paper/main.pdf\n",
+    "\n",
+    "### Definitions\n",
+    "\n",
+    "**Favorable label:** The value considered favorable. Usually 1.0 as opposed to the unfavorable label: 0.1\\\n",
+    "**Pre-processing algorithm:** Bias mitigation algorithm applied prior to the creation of the model.\\\n",
+    "**In-processing algorithm:** Bias mitigation algorithm applied during training.\\\n",
+    "**Post-processing algorithm:** Bias mitigation algorithm applied to predicted labels.\\\n",
+    "**Equalized odds:** Instances have equal odds of being assigned to the positive group, regardless of which group they belong to (protected attribute). The use of the protected attribute is prohibitied in determining the outcome value.\n",
+    "**Equal opportunity:** A weaker notion than equalized odds. It requires non-discrimination among the \"advantaged\" outcome group. In this case, those assigned to the positive class (employed).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +74,13 @@
    ],
    "source": [
     "# Privileged, unprivileged groups (males are the privileged class, females unprivileged)\n",
-    "privileged_groups = [{\"Sex\": 1}]\n",
-    "unprivileged_groups = [{\"Sex\": 0}]\n",
+    "privileged_groups = [{'Race': 1}]\n",
+    "unprivileged_groups = [{'Race': 0}]\n",
     "\n",
     "# Load dataset\n",
-    "dataset_orig = preprocess_employment(['Sex'])\n",
+    "dataset_orig = preprocess_employment(['Race'])\n",
     "\n",
-    "# Metric used (should be one of allowed_metrics)\n",
+    "# Measures the difference between favorable outcome for the unprivileged group to the privileged group\n",
     "metric_name = \"Statistical parity difference\"\n",
     "\n",
     "# Upper and lower bound on the fairness metric used\n",
@@ -89,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split into train and test\n",
+    "# Split into train and test (70% train, 15% validate & 15% train)\n",
     "dataset_orig_train, dataset_orig_vt = dataset_orig.split([0.7], shuffle=True)\n",
     "dataset_orig_valid, dataset_orig_test = dataset_orig_vt.split([0.5], shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Sex']\n"
+      "['Race']\n"
      ]
     },
     {
@@ -200,7 +213,7 @@
     }
    ],
    "source": [
-    "# print out some labels, names, etc.\n",
+    "# Display dataset shape, privileged/unprivileged classes and attribute\n",
     "display(Markdown(\"#### Training Dataset shape\"))\n",
     "print(dataset_orig_train.features.shape)\n",
     "display(Markdown(\"#### Favorable and unfavorable labels\"))\n",
@@ -223,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -239,20 +252,41 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/markdown": [
+       "A value of 1 indicates full discrimination, while -1 is the reverse discrimination case. A value close to 0 is favorable. (1 - mean difference\")"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Difference in mean outcomes between unprivileged and privileged groups = -0.002010\n"
+      "The difference in mean outcomes between unprivileged and privileged groups is -0.036244\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "metric_orig_train = BinaryLabelDatasetMetric(dataset_orig_train, \n",
     "                                             unprivileged_groups=unprivileged_groups,\n",
     "                                             privileged_groups=privileged_groups)\n",
     "display(Markdown(\"#### Original training dataset\"))\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())"
+    "display(Markdown('A value of 1 indicates full discrimination, while -1 is the reverse discrimination case. A value close to 0 is favorable. (1 - mean difference\")'))\n",
+    "print(f'The difference in mean outcomes between unprivileged and privileged groups is { metric_orig_train.mean_difference():.6f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intuition\n",
+    "\n",
+    "The privileged group gets 3.6% more favorable outcome than the unprivileged group in the training dataset. Thus, slight discrimination takes place. To mitigate for this, we're going to use the reject-option classification post-processing algorithm."
    ]
   },
   {
@@ -264,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,15 +415,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal classification threshold (with fairness constraints) = 0.9405\n",
-      "Optimal ROC margin = 0.0012\n"
+      "Optimal classification threshold (with fairness constraints) = 0.9108\n",
+      "Optimal ROC margin = 0.0218\n"
      ]
     }
    ],
@@ -407,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -439,10 +473,10 @@
      "output_type": "stream",
      "text": [
       "Balanced accuracy = 0.6058\n",
-      "Statistical parity difference = 0.0099\n",
-      "Disparate impact = 1.0210\n",
-      "Average odds difference = 0.0260\n",
-      "Equal opportunity difference = 0.0056\n",
+      "Statistical parity difference = -0.3207\n",
+      "Disparate impact = 0.4052\n",
+      "Average odds difference = -0.2843\n",
+      "Equal opportunity difference = -0.3214\n",
       "Theil index = 0.6538\n"
      ]
     }
@@ -461,8 +495,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intution\n",
+    "\n",
+    "Statistical parity is the difference (SPD) between the probability of an unprivileged instance being labeled 1 (employed) and an privileged instance being labeled 1. This means that, without any fairness constraints, an privilileged instance is 32% more likely to be assigned the employed class. An SPD close to 0 indicates fairness.\n",
+    "\n",
+    "For the average odds measure, a value closer to 0 is favorable for fairness.\n",
+    "\n",
+    "For disparate impact, a value closer to 1 is favorable. It is equal to the probability of an unprivileged instance getting a favorable outcome divided by the probability of an privileged class getting a favorable outcome.\n",
+    "\n",
+    "For equal opportunity difference, a value closer to 0 is favorable. This simply states that, people with similar attributes, protected attributes aside, should be given an equal opportunity of being assigned to a positive class.\n",
+    "\n",
+    "All of these, with the exception of disparate impact, have an ideal value of 0, with values between 0.1 and -0.1 indicating fairness. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -493,12 +544,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.6063\n",
-      "Statistical parity difference = 0.0360\n",
-      "Disparate impact = 1.0801\n",
-      "Average odds difference = 0.0565\n",
-      "Equal opportunity difference = 0.0310\n",
-      "Theil index = 0.6649\n"
+      "Balanced accuracy = 0.5986\n",
+      "Statistical parity difference = 0.0234\n",
+      "Disparate impact = 1.0354\n",
+      "Average odds difference = 0.0547\n",
+      "Equal opportunity difference = 0.0244\n",
+      "Theil index = 0.3664\n"
      ]
     }
    ],
@@ -514,21 +565,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-0bc1468b000a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Testing: Check if the metric optimized has not become worse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetric_valid_aft\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmetric_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetric_valid_bef\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmetric_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing: Check if the metric optimized has not become worse\n",
     "assert np.abs(metric_valid_aft[metric_name]) <= np.abs(metric_valid_bef[metric_name])"
@@ -543,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -575,10 +614,10 @@
      "output_type": "stream",
      "text": [
       "Balanced accuracy = 0.5994\n",
-      "Statistical parity difference = -0.0252\n",
-      "Disparate impact = 0.9490\n",
-      "Average odds difference = -0.0212\n",
-      "Equal opportunity difference = -0.0261\n",
+      "Statistical parity difference = -0.3248\n",
+      "Disparate impact = 0.4065\n",
+      "Average odds difference = -0.3105\n",
+      "Equal opportunity difference = -0.3198\n",
       "Theil index = 0.6487\n"
      ]
     }
@@ -598,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -629,12 +668,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.5974\n",
-      "Statistical parity difference = 0.0012\n",
-      "Disparate impact = 1.0025\n",
-      "Average odds difference = 0.0019\n",
-      "Equal opportunity difference = 0.0008\n",
-      "Theil index = 0.6590\n"
+      "Balanced accuracy = 0.5950\n",
+      "Statistical parity difference = 0.0067\n",
+      "Disparate impact = 1.0100\n",
+      "Average odds difference = -0.0169\n",
+      "Equal opportunity difference = 0.0213\n",
+      "Theil index = 0.3660\n"
      ]
     }
    ],
@@ -658,7 +697,7 @@
     "\n",
     "**Performance**\n",
     "\n",
-    "| Dataset | Sex (Acc-Bef) | Sex (Acc-Bef) | Sex (Fair-Bef) | Sex (Fair-Aft) |\n",
+    "| Dataset | Sex (Acc-Bef) | Sex (Acc-Aft) | Sex (Fair-Bef) | Sex (Fair-Aft) |\n",
     "|---------|---------------|---------------|----------------|----------------|\n",
     "| Valid   | 0.6058        | 0.6063        | -0.0252        | 0.0360         |\n",
     "| Test    | 0.5994        | 0.5974        | -0.0252        | 0.0012         |\n",
@@ -708,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
